Screens: elevate expanded screen to stop clipping

--- a/source/frontend/components/screen/screencontainer/ScreenContainer.module.css
+++ b/source/frontend/components/screen/screencontainer/ScreenContainer.module.css
@@ -44,6 +44,7 @@
 
 .screenContent {
 	position: absolute;
+	z-index: 10;
 	width: 100%;
 	background-color: inherit;
 	border-radius: var(--border-rounding);
